--- a/htdocs/reviews/index.html
+++ b/htdocs/reviews/index.html
@@ -162,7 +162,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Megenity, (c) Primedia Group Inc.</p>
       <H2><img src="SGTHcover.jpg" width="92" height="117"></H2>
       <H2>&nbsp;</H2>
-      <h1>Home theater computers makers</h1>
+      <h1>Manufacturers</h1>
       <p>They're building home theater computers, and some of them have chosen 
         to bundle Dscaler in their configuration.</p>
       <ul>
@@ -170,10 +170,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           using Zoltrix cards</li>
         <li><a href="http://www.digitalconnection.com">DigitalConnection</a></li>
         <li><a href="http://www.spatz-tech.de">Spatz Tech</a>, from Germany</li>
-        <li><a href="http://www.cellarcinema.com">Cellar Cinema</a> are using 
+        <li><a href="http://www.cellarcinemas.com">Cellar Cinemas</a> are using 
           Osprey cards</li>
       </ul>
-      <H2>&nbsp;</H2>
+      <p><a href="http://www.hauppauge.com/html/sw_wcst.htm#3rd">Hauppauge</a> 
+        is using a Directshow deinterlacing filter coming from the DScaler team.</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
@@ -194,7 +195,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         | <a href="../downloads.htm" class="bottommenu">download</a> 
         | <a href="../Authors.htm" class="bottommenu">authors</a> 
         | <a href="../Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="index.html" class="bottommenu">setup</a> | <a href="../keyboard.htm" class="bottommenu">keyboard 
+        <a href="index.htm" class="bottommenu">setup</a> | <a href="../keyboard.htm" class="bottommenu">keyboard 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
         list</a> | <a href="../FAQ.htm" class="bottommenu">faq</a> | <a href="../developers.htm" class="bottommenu">developers</a> 
         | <a href="../Links.htm" class="bottommenu">links</a></div>
