--- a/DScaler/Help/OddOnly.HTM
+++ b/DScaler/Help/OddOnly.HTM
@@ -57,7 +57,7 @@ height="2"></td>
 <!-- #BeginEditable "Text" -->
 <p>These use only the odd fields out of each pair and uses hardware
 scaling.  This reduces bob artifacts at the cost of loss of
-information.  This method were originally intended to be used with game
+information.  This method was originally intended to be used with game
 consoles.</p>
 <!-- #EndEditable -->
 </td>
