--- a/DScaler/Help/OldGame.htm
+++ b/DScaler/Help/OldGame.htm
@@ -57,23 +57,21 @@ height="2"></td>
 <!-- #BeginEditable "Text" -->
 <p>This method improves the display of video games from old
 consoles on your computer. Instead of deinterlacing like most
-DScaler plugins, it smooths vertically. That gets rid of the
-weird jittering you'd otherwise see. It works nicely with just
+DScaler methods, it smooths vertically. That gets rid of the
+blockiness you'd otherwise see. It works nicely with just
 about any game on a PlayStation, Super Nintendo, or Genesis.
 Presumably, it will work well with a Nintendo 64, Saturn, Atari,
 NES, Megadrive, and so on. Just don't try it with your
 Vectrex.</p>
 
-<p>More exactly, this plugin assumes that you're looking at a
-progressive half height image. So any video source which fits
+<p>More exactly, this method assumes that you're looking at a
+progressive half vertical resolution image. So any video source which fits
 that description should work well. The Old Game method is similar
-to the OddOnly and EvenOnly plugins, but improves the picture in
+to <A HREF="OddOnly.HTM">OddOnly</A> and <A HREF="EvenOnly.HTM">EvenOnly</A>, but improves the picture in
 a couple ways. First, it works well with material running at any
 FPS (frames per second) rate, instead of just 25 or 30 FPS.
 Second, it optionally uses averaging between frames to reduce
-noise and color crosstalk. Averaging is an especially nice
-improvement if you've connected your console with a composite
-connector. The averaging works well alone or along with a noise
+noise and color crosstalk. The averaging works well alone or along with a noise
 filter.</p>
 
 <p>Later consoles such as the Dreamcast, PlayStation 2, GameCube,
@@ -81,14 +79,14 @@ or XBox use interlaced output, and will look lousy with this
 plugin. (Well, some of them allow progressive output, too, but
 not in a way the supported input cards can understand.) To play
 them on your computer, use the more standard deinterlacing
-plugins. The Super Nintendo, PlayStation, Nintendo 64, and Saturn
+plugins -- or better yet, find a VGA adaptor. The Super Nintendo, PlayStation, Nintendo 64, and Saturn
 can also use an interlaced mode. The PlayStation uses interlaced
 mode for its startup logo, for example. But almost all games
-switch back into progressive half height mode for the main play
+switch back into progressive half vertical resolution mode for the main play
 of the game. Automatic sensing of the interlace mode is something
 I'd like to add in the future.</p>
 
-<p> </p>
+<HR>
 
 <p><b><font face="Arial" size="4">Who Should Use
 It?</font></b></p>
@@ -99,19 +97,19 @@ better comes along.)</p>
 
 <p>There's a bug in some older Matrox overlay drivers which
 allows the Scaler Bob plugin to work nearly as well as Old Game
-for progressive half height video. It doesn't use averaging to
+for progressive half vertical resolution video. It doesn't use averaging to
 reduce noise, but it should run a little faster. On the other
-hand, since Old Game is fast enough to run just fine on any
-computer supported by DScaler, that doesn't really gain you
+hand, Old Game is fast enough to run just fine on any
+computer supported by DScaler, so that doesn't really get you
 much.</p>
 
-<p> </p>
+<HR>
 
 <p><b><font face="Arial" size="4">The Settings</font></b></p>
 
-<p>There are two options to set for this plugin, Composite Mode
-and Motion Threshold. Composite Mode forces the plugin to always
-average between frames. Motion Threshold is the amount of motion
+<p>There are two options to set for this plugin, <font color = "#993300">Composite Mode</font>
+and <font color = "#993300">Motion Threshold</font>. <font color = "#993300">Composite Mode</font> forces the plugin to always
+average between frames. <font color = "#993300">Motion Threshold</font> is the amount of motion
 (in arbitrary units) which will convince the plugin not to
 average between frames.</p>
 
@@ -121,14 +119,14 @@ connected your console.</p>
 <p><b><font face="Arial">Composite or F-Connector</font></b></p>
 
 <p>With a composite connection, the biggest problem by far will
-be color crosstalk. To get rid of it, check (would you believe)
-the Composite Mode option. That way, the crosstalk will be
+be color crosstalk. To get rid of it, check
+<font color = "#993300">Composite Mode</font>. That way, the crosstalk will be
 averaged out. This makes the picture look much, much nicer.</p>
 
-<p>With Composite Mode checked, the Motion Threshold slider won't
+<p>With <font color = "#993300">Composite Mode</font> checked, the <font color = "#993300">Motion Threshold</font> slider won't
 do anything at all.</p>
 
-<p>Surprisingly, the Temporal Comb plugin doesn't help at all for
+<p>Surprisingly, the <A HREF="TemporalComb.htm">Temporal Comb</A> filter doesn't help at all for
 crosstalk in most old video games. That's for an obscure
 technical reason involving the phase of the color carrier signal
 and the number of scanlines per frame.</p>
@@ -136,11 +134,11 @@ and the number of scanlines per frame.</p>
 <p><b><font face="Arial">S-video</font></b></p>
 
 <p>With an S-video connection, you shouldn't see much color
-crosstalk. So you can afford to use the slider to prevent
-averaging when the scene is moving. Turn off the Composite Mode
-option and set Motion Threshold to about 300. Increase it a bit
-if you have a noisy picture (and turn on a noise filter) , or
-decrease it if you see blurring during fast motion.</p>
+crosstalk. So you can afford to set the slider to prevent
+averaging when the scene is moving. Turn off <font color = "#993300">Composite Mode</font>
+and put the <font color = "#993300">Motion Threshold</font> at about 300. Increase it a bit
+if you have a noisy picture (and turn on a noise filter), or
+decrease it if you see blurring with fast motion.</p>
 
 <!-- #EndEditable -->
 </td>
